# vgmcharts

./: .env-example  .gitignore  LICENSE  README.md  THIRD_PARTY_LICENSES.md  docker-compose.yml  main.py  pyproject.toml
api/: Dockerfile  README.md  go.mod  main.go
data/bulbapedia/: README.md
data/bulbapedia/raw/: ost_releases_info.en.csv
db/: 01_users.sql  02_schema.sql  03_constraints.sql  03_seed_dev.sql  04_seed_dev.sql
db/initdb/: init.sh
pipelines/: .dockerignore  Dockerfile  README.md  pyproject.toml  requirements.txt
pipelines/data/: .gitignore
pipelines/data/bulbapedia/raw/: ost_releases_info.en.csv  ost_releases_info.ja.csv
pipelines/init/: 0_setup_data_lake.py
pipelines/pokemon/: bulba_utils.py  get_ost_albums_basic_info.py  get_ost_metadata.py
pipelines/utils/: bulbapedia.py  object_store.py
web/: README.md
