[project]
name = "vgmcharts"
version = "0.1.0"
description = "Explore trending video game music"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "boto3>=1.42.56",
    "pandas>=3.0.0",
    "pyarrow>=23.0.1",
    "python-dateutil>=2.9.0.post0",
    "requests>=2.32.5",
    "wikitextparser>=0.56.4",
]

[dependency-groups]
dev = [
    "black>=26.1.0",
]
